<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="41.25dp"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/bt_back"
            android:layout_width="19.5dp"
            android:layout_height="15.0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7.5dp"
            android:background="@drawable/img_back" />

        <Button
            android:id="@+id/bt_edit"
            android:layout_width="26.25dp"
            android:layout_height="26.25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="7.5dp"
            android:background="@drawable/img_edit" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="135.0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="dsgdsmglskgnjslgkshjglskghsdkglshjglskhj"
            android:textColor="@color/white"
            android:textSize="14.25dp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:paddingLeft="7.5dp"
            android:paddingRight="7.5dp"
            android:singleLine="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="7.5dp"
        android:text="@string/app_name"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_content"
        android:layout_marginTop="7.5dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingBottom="11.25dp">

        <Button
            android:id="@+id/bt_skip"
            android:layout_width="wrap_content"
            android:layout_height="30.0dp"
            android:layout_marginRight="7.5dp"
            android:background="@drawable/bgr_boder_button"
            android:text="@string/bt_skip"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/bt_take"
            android:layout_width="wrap_content"
            android:layout_height="30.0dp"
            android:layout_marginRight="7.5dp"
            android:background="@drawable/bgr_border_button_3"
            android:text="@string/bt_take"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_snooze"
            android:layout_width="wrap_content"
            android:layout_height="30.0dp"
            android:background="@drawable/bgr_boder_button"
            android:text="@string/bt_snooze"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>
