<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center_vertical">

        <ImageView
            style="@style/imgItem"
            android:background="@drawable/img_flag" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7.5dp"
            android:text="@string/end_date_medi"
            android:textColor="@android:color/black"
            android:textSize="9.75dp"
            android:textStyle="bold" />
    </LinearLayout>


    <RadioGroup
        android:id="@+id/rd_group_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbEnDate"
            style="@style/radioButtonComponent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/specific_date"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/bgr_border_view"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:textColor="@color/toggle_button"
                android:textSize="@dimen/tvTitleMedica" />

            <ImageButton
                android:id="@+id/btnEndate"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/img_get_date" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbAfter"
            style="@style/radioButtonComponent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:buttonTint="@color/toggle_button"
            android:text="@string/after"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="7.5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnSubAfter"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/img_sub"
                android:padding="@dimen/_2sdp" />

            <EditText
                android:id="@+id/tvIntake"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/bgr_border_content_doctor"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2"
                android:padding="@dimen/_3sdp"
                android:text="1"
                android:textSize="@dimen/tvTitleMedica" />

            <ImageButton
                android:id="@+id/btnAddAfter"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/img_add_unit"
                android:padding="@dimen/_2sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:text="Intakes"
                android:textSize="@dimen/tvTitleMedica" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rbIndenfinite"
            style="@style/radioButtonComponent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:buttonTint="@color/toggle_button"
            android:checked="true"
            android:text="@string/indefinite"
            android:textColor="@android:color/black" />

    </RadioGroup>
</LinearLayout>