<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/defaults"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="ADD Appointment"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        style="@style/layout_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/imgItem"
            android:background="@drawable/img_profile" />

        <TextView
            style="@style/tv_title_component"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/doctor" />

        <Spinner
            android:id="@+id/spDoctorApp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/gradient_spinner"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/AppbtnAddDoctor"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@drawable/img_add" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/imgItem"
            android:background="@drawable/img_calendar" />

        <TextView
            style="@style/tv_title_component"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/schedule_medi" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="10/22/2017"
            android:textColor="@color/color_tv_default"
            android:textSize="@dimen/tvTitleMedica" />

        <Button
            android:id="@+id/AppGetDate"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@drawable/img_get_date" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/imgItem"
            android:background="@drawable/img_clock_black" />

        <TextView
            style="@style/tv_title_component"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="21:58"
            android:textColor="@color/color_tv_default"
            android:textSize="@dimen/tvTitleMedica" />

        <Button
            android:id="@+id/appGetTime"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@drawable/img_clock" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/imgItem"
            android:background="@drawable/img_pin" />

        <TextView
            style="@style/tv_title_component"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/note" />
    </LinearLayout>

    <EditText
        android:id="@+id/edNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp" />

    <Button
        android:id="@+id/appCreate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/bgr_button_default"
        android:text="Ok"
        android:textColor="@color/white"
        android:textSize="15.0dp" />
</LinearLayout>